Changelog:
V0.5.0.0:
- Open source oooOOooOOoo
- Add shortcut keys to Load, Load Last and allow enter key to open maps from maplist [FDeityLink]
- Fix various bugs related to CS+ modding [GIR]
- Add a confirmation dialogue to map deletion [Leo40]
- Expose editor mode as a command-line option


V0.4.5.5:
- Improvements to the behaviour of fill and replace
- allow map list to work if resorted

V0.4.5.4:
- Make tilepen static (you can copy/draw tiles between maps)
- Add file checker to the action menu

V0.4.5.3:
- Change how graphics are created in some areas to hopefully address clipping issues

V0.4.5.2:
- Support different encodings in TSC editor (set in project config)

V0.4.5.1:
- Made the entity selection list a set, preventing double-selection bugs
- fixed pasting entities which was broken in previous release
- TSC previews for <GIT now show the correct items

V0.4.5.0:
- Added more hacks to the hackinator, including TSC+
- Selecting a stack of entities brings up a popup letting you choose which to select, rather than just always picking from the top.
- Fixed a bug where changes to npc.tbl would not save in certain conditions.
- Fixed npc placement when shifting the map
- Added delete option to the context menu for entity editor
- added drag-select to entity editor
- you can now use ctrl-a to select all entities on the map in entity edit mode
- you now have to double-click an NPC type in the NPC list to change the type of a selected entity
- the command to add an entity to the map has been changed to the 'i' key, previously it was double-click
- removed cairn from entityinfo.txt
- updated sfxlist by zxin I think

V0.4.4.3:
- Added a gradient layer for TESS, new nxm format number 0x33
- Fixed some other things for GIR
- massive performance boost for the tile view
- added some hackinator hacks & fixed a few that were busted

V0.4.3.0:
- Added a TSC argument decoder to the TSC thing, so you can see facepics and stuff